--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -37,7 +37,7 @@ main section:nth-of-type(2) section:first-of-type {
   display: flex;
 }
 main section:nth-of-type(2) section:first-of-type aside {
-  background: linear-gradient(45deg, #00B1F5, rgba(0, 0, 0, 0));
+  background-image: linear-gradient(to bottom right, #00B1F500, rgba(0, 0, 0, 0));
   cursor: url(../img/spraycan-tilt.svg) 2 2, auto;
   height: 118px;
   position: absolute;
@@ -46,14 +46,11 @@ main section:nth-of-type(2) section:first-of-type aside {
           mask-image: url(../img/CSSTOTHERESCUE.svg);
 }
 main section:nth-of-type(2) section:first-of-type aside:hover {
-  animation: fill 3s;
+  animation: fill 1.3s;
 }
 @keyframes fill {
-  from {
-    background: linear-gradient(45deg, rgba(0, 0, 0, 0));
-  }
-  to {
-    backgrounde: linear-gradient(45deg, #00B1F5);
+  100% {
+    background-image: linear-gradient(to bottom right, #00B1F5, #00B1F509);
   }
 }
 main section:nth-of-type(2) section:first-of-type div:nth-of-type(2):hover {
@@ -114,19 +111,68 @@ main section:nth-of-type(2) section:first-of-type div:nth-of-type(2) img:nth-of-
     opacity: 1;
   }
 }
-main section:nth-of-type(2) section:nth-of-type(2) svg rect {
-  transition: all ease-in-out 2s;
+main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type input[type="checkbox"]:checked ~ svg path {
+  stroke-dashoffset: 0;
+  stroke: #fff;
+  fill: none;
 }
-main section:nth-of-type(2) section:nth-of-type(2) svg:hover rect:nth-of-type(odd) {
-  transform: translateX(-40px);
+main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type label {
+  width: 65px;
+  height: 160px;
+  position: absolute;
+  left: 0.5em;
+  top: 0;
+  z-index: 9999;
 }
-main section:nth-of-type(2) section:nth-of-type(2) svg:hover rect:nth-of-type(even) {
-  transform: translateX(40px);
+main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type svg:last-of-type {
+  width: 65px;
+  height: 160px;
+  position: absolute;
+  left: 0.5em;
+  top: 0;
+  background-color: #630000;
+}
+main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type svg:last-of-type path {
+  fill: none;
+  transition: fill 0.1s linear 1s;
+  transition: stroke-dashoffset 1s linear;
+}
+main section:nth-of-type(2) section:nth-of-type(2) input[type=radio]:first-of-type {
+  position: absolute;
+  z-index: 999;
+}
+main section:nth-of-type(2) section:nth-of-type(2) input[type=radio]:checked:first-of-type ~ div > div:nth-of-type(2) {
+  opacity: 1;
+}
+main section:nth-of-type(2) section:nth-of-type(2) input[type=radio]:checked:nth-of-type(2) ~ div > div:nth-of-type(3) {
+  opacity: 1;
+}
+main section:nth-of-type(2) section:nth-of-type(2) input[type=radio]:checked:nth-of-type(3) ~ div > div:nth-of-type(4) {
+  opacity: 1;
 }
 main section:nth-of-type(2) section:nth-of-type(2) div:first-of-type {
+  position: relative;
+}
+main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type svg rect {
+  transition: all ease-in-out 2s;
+}
+main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type svg:hover rect:nth-of-type(odd) {
+  transform: translateX(-40px);
+}
+main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type svg:hover rect:nth-of-type(even) {
+  transform: translateX(40px);
+}
+main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type svg {
   margin-bottom: 3em;
-  transition: all 2s;
   transform: translateX(0);
+}
+main section:nth-of-type(2) section:nth-of-type(2) div div:nth-of-type(2) {
+  display: flex;
+  flex-direction: column;
+  opacity: 0;
+  position: absolute;
+  bottom: 25%;
+  left: 35%;
 }
 @keyframes moveBackground {
   from {
@@ -171,6 +217,7 @@ main section:nth-of-type(2) section:nth-of-type(2) div:first-of-type {
   }
 }
 main section:nth-of-type(2) section:nth-of-type(3) {
+  font-family: 'Permanent Marker', cursive;
   position: absolute;
   left: 0;
   top: 80vh;
@@ -187,29 +234,21 @@ main section:nth-of-type(2) section:nth-of-type(3) div {
   width: 90vw;
 }
 main section:nth-of-type(2) section:nth-of-type(3) div:first-of-type {
-  transition: all 3s;
   background-color: #9ba8b1;
   height: 2em;
   -webkit-clip-path: polygon(0 0, 90% 0, 100% 100%, 0 100%);
           clip-path: polygon(0 0, 90% 0, 100% 100%, 0 100%);
 }
 main section:nth-of-type(2) section:nth-of-type(3) div:nth-of-type(2) {
+  display: flex;
   background-color: #503232;
   height: 4em;
 }
-label {
-  background-color: green;
-  color: lawngreen;
-  font-size: 3em;
-  padding: 1rem 2rem;
-  position: absolute;
-  z-index: 99;
-}
-label:hover {
-  animation: 1s chevron-enter;
-}
-label:hover {
-  animation: 1s chevron-leave;
+main section:nth-of-type(2) section:nth-of-type(3) label {
+  background-color: #008938;
+  color: white;
+  padding: 0.5rem;
+  margin: 0.5rem;
 }
 @keyframes chevron-enter {
   0% {
