--- a/docs/css/styles.css
+++ b/docs/css/styles.css
@@ -2,12 +2,8 @@
   margin: 0;
   padding: 0;
 }
-header {
-  transform: translateY(-100%);
-  transition: all 3s ease;
-}
-main {
-  transform: translateY(-2em);
+body {
+  display: flex;
 }
 main input:checked + section > section:first-of-type > div {
   transform: translateX(-120vw);
@@ -25,15 +21,14 @@ main input:checked + section > section:nth-child(3) > div {
 }
 main section:nth-of-type(2) {
   width: 400vw;
-  height: 80vh;
+  height: auto;
   overflow: hidden;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
 }
 main section:nth-of-type(2) section:first-of-type {
   align-items: flex-start;
-  position: absolute;
-  height: 50vh;
+  height: 100%;
   display: flex;
 }
 main section:nth-of-type(2) section:first-of-type aside {
@@ -103,24 +98,20 @@ main section:nth-of-type(2) section:first-of-type div:nth-of-type(2) img:nth-of-
   animation: blink 0.23s 2.3s;
   animation-iteration-count: 4;
 }
-@keyframes blink {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
+main section:nth-of-type(2) section:nth-of-type(2) {
+  position: absolute;
 }
 main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type input[type="checkbox"]:checked ~ svg path {
-  stroke-dashoffset: 0;
+  stroke-dashoffset: 270;
   stroke: #fff;
-  fill: none;
+  animation: outline 3s linear forwards;
 }
 main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type label {
+  cursor: url(../img/spraycan-tilt.svg) 2 2, auto;
   width: 65px;
   height: 160px;
   position: absolute;
-  left: 0.5em;
+  left: 4em;
   top: 0;
   z-index: 9999;
 }
@@ -133,9 +124,17 @@ main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type svg:las
   background-color: #630000;
 }
 main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type svg:last-of-type path {
-  fill: none;
-  transition: fill 0.1s linear 1s;
-  transition: stroke-dashoffset 1s linear;
+  fill: rgba(0, 0, 0, 0);
+}
+@keyframes outline {
+  50% {
+    fill: #ffffffcb;
+    stroke-dashoffset: 50%;
+  }
+  100% {
+    stroke-dashoffset: 0;
+    fill: #ffffff;
+  }
 }
 main section:nth-of-type(2) section:nth-of-type(2) input[type=radio]:first-of-type {
   position: absolute;
@@ -161,10 +160,6 @@ main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type svg:hov
 }
 main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type svg:hover rect:nth-of-type(even) {
   transform: translateX(40px);
-}
-main section:nth-of-type(2) section:nth-of-type(2) div div:first-of-type svg {
-  margin-bottom: 3em;
-  transform: translateX(0);
 }
 main section:nth-of-type(2) section:nth-of-type(2) div div:nth-of-type(2) {
   display: flex;
@@ -250,31 +245,11 @@ main section:nth-of-type(2) section:nth-of-type(3) label {
   padding: 0.5rem;
   margin: 0.5rem;
 }
-@keyframes chevron-enter {
+@keyframes blink {
   0% {
-    -webkit-clip-path: polygon(-25% 0%, 0% 50%, -25% 100%, -100% 100%, -75% 50%, -100% 0%);
-            clip-path: polygon(-25% 0%, 0% 50%, -25% 100%, -100% 100%, -75% 50%, -100% 0%);
-  }
-  75% {
-    -webkit-clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-            clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
+    opacity: 0;
   }
   100% {
-    -webkit-clip-path: polygon(100% 0%, 100% 50%, 100% 100%, 0% 100%, 0% 50%, 0% 0%);
-            clip-path: polygon(100% 0%, 100% 50%, 100% 100%, 0% 100%, 0% 50%, 0% 0%);
-  }
-}
-@keyframes chevron-leave {
-  0% {
-    -webkit-clip-path: polygon(100% 0%, 100% 50%, 100% 100%, 0% 100%, 0% 50%, 0% 0%);
-            clip-path: polygon(100% 0%, 100% 50%, 100% 100%, 0% 100%, 0% 50%, 0% 0%);
-  }
-  25% {
-    -webkit-clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-            clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%);
-  }
-  100% {
-    -webkit-clip-path: polygon(175% 0%, 200% 50%, 175% 100%, 100% 100%, 125% 50%, 100% 0%);
-            clip-path: polygon(175% 0%, 200% 50%, 175% 100%, 100% 100%, 125% 50%, 100% 0%);
+    opacity: 1;
   }
 }
