--- a/docs/css/styles2.less
+++ b/docs/css/styles2.less
@@ -15,6 +15,13 @@ main{
     align-items: center;
     width: auto;
 }
+
+embed{
+    display: none ;
+    opacity: 0;
+}
+
+   
 section{
         div {
             div{
@@ -22,6 +29,10 @@ section{
                 div{
                     position: absolute;
                     top: 0;
+                    
+                    input[type="checkbox"]:checked ~ embed{
+                         display: block;
+                    }
                     input[type="checkbox"]:checked ~ svg  {
                         path{
                             stroke-dashoffset: 270;
