--- a/docs/css/styles2.css
+++ b/docs/css/styles2.css
@@ -2,47 +2,193 @@
   --red: #630000;
   --white: #fff;
 }
+body > input[type="radio"]:checked + div:first-of-type {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.826);
+  z-index: 99;
+}
 body {
   margin: 0;
-  background-image: url(../img/Background.svg);
-  background-repeat: no-repeat;
   z-index: -1;
 }
+body > div {
+  position: absolute;
+}
+body > div:nth-of-type(2) > div {
+  opacity: 0;
+  animation-delay: 2s;
+}
+body > div > div {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  animation: move 4s infinite;
+}
+body > div > div svg {
+  padding-left: 5px;
+}
+@keyframes move {
+  0% {
+    opacity: 1;
+    transform: translateX(100vw);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(-80vw);
+  }
+}
+body > div:first-of-type:hover {
+  animation: wiggle 3s infinite;
+}
+body > div:first-of-type:hover svg {
+  animation: blink 0.2s infinite 0.3s;
+}
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+h2 {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  top: 3em;
+  position: absolute;
+  animation: scaleBlink 1s infinite;
+}
+@keyframes scaleBlink {
+  to {
+    transform: scale(5) skewX(40deg);
+    opacity: 50%;
+    color: #fff;
+  }
+}
+@keyframes wiggle {
+  0% {
+    -webkit-transform: translateX(0%);
+  }
+  15% {
+    -webkit-transform: translateX(-2%) rotate(-0.5deg);
+  }
+  30% {
+    -webkit-transform: translateX(2%) rotate(0.3deg);
+  }
+  45% {
+    -webkit-transform: translateX(-1%) rotate(-0.3deg);
+  }
+  60% {
+    -webkit-transform: translateX(1%) rotate(0.2deg);
+  }
+  75% {
+    -webkit-transform: translateX(-0.5%) rotate(-0.1deg);
+  }
+  100% {
+    -webkit-transform: translateX(0%);
+  }
+}
+body > section {
+  animation: moveBackground 5s infinite linear;
+  height: 400px;
+  width: 180vw;
+  position: absolute;
+  top: 2em;
+  z-index: -1;
+}
+@keyframes moveBackground {
+  from {
+    transform: translateX(10vw);
+  }
+  to {
+    transform: translateX(-180vw);
+  }
+}
 main {
-  height: 100vh;
   display: flex;
   align-items: center;
+  margin-top: 15em;
+  position: absolute;
   width: auto;
 }
 embed {
   display: none ;
   opacity: 0;
 }
-section div div {
+main > section:first-of-type {
+  animation: moveTrain 12s infinite;
+}
+main > section:first-of-type div div {
   position: relative;
 }
-section div div div {
+main > section:first-of-type div div aside > div {
+  background-image: radial-gradient(#383838, #1f1e1e);
+  display: block;
+  border-radius: 50%;
+  border: 3px groove;
+  width: 4em;
+  height: 4em;
+  animation: turn 1s infinite;
+  position: absolute;
+  bottom: -2em;
+  z-index: -1;
+}
+main > section:first-of-type div div aside > div:after {
+  content: "";
+  display: block;
+  background-color: rgba(255, 255, 255, 0);
+  border: rgba(218, 165, 32, 0) 3px solid;
+  position: absolute;
+  animation: spark 0.01s infinite;
+  z-index: 99;
+}
+main > section:first-of-type div div aside div:first-of-type {
+  right: 50%;
+}
+main > section:first-of-type div div aside div:first-of-type:after {
+  animation-delay: 0.1s;
+}
+main > section:first-of-type div div aside div:nth-of-type(2) {
+  right: 15%;
+}
+main > section:first-of-type div div aside div:nth-of-type(2):after {
+  animation-delay: 3s;
+}
+main > section:first-of-type div div aside div:nth-of-type(3) {
+  left: 5%;
+}
+main > section:first-of-type div div aside div:nth-of-type(3):after {
+  animation-delay: 5.5s;
+}
+main > section:first-of-type div div > div:last-child {
+  background-image: rgba(0, 0, 0, 0);
+  border: none;
   position: absolute;
   top: 0;
 }
-section div div div input[type="checkbox"]:checked ~ embed {
+main > section:first-of-type div div > div:last-child input[type="checkbox"]:checked ~ embed {
   display: block;
 }
-section div div div input[type="checkbox"]:checked ~ svg path {
+main > section:first-of-type div div > div:last-child input[type="checkbox"]:checked ~ svg {
+  opacity: 1;
+}
+main > section:first-of-type div div > div:last-child input[type="checkbox"]:checked ~ svg path {
   stroke-dashoffset: 270;
   stroke: var(--white);
   animation: outline 3s linear forwards;
 }
-section div div div label {
+main > section:first-of-type div div > div:last-child label {
   opacity: 0;
   cursor: url(../img/spraycan-tilt.svg) 2 2, auto;
   width: 65px;
   height: 160px;
   position: absolute;
   left: 90px;
+  top: 0;
   z-index: 99;
 }
-section div div div svg:last-of-type {
+main > section:first-of-type div div > div:last-child svg:last-of-type {
   width: 65px;
   height: 160px;
   position: absolute;
@@ -50,8 +196,58 @@ section div div div svg:last-of-type {
   top: 0;
   background-color: var(--red);
 }
-section div div div svg:last-of-type path {
+main > section:first-of-type div div > div:last-child svg:last-of-type path {
   fill: rgba(0, 0, 0, 0);
+}
+section:last-of-type {
+  position: absolute;
+  bottom: -3em;
+  width: 120vw;
+  height: 15px;
+  background-color: #310000;
+  border-top: #3d1d1d 2px solid;
+}
+@keyframes spark {
+  from {
+    background-color: ivory;
+    transform: scale(6);
+    opacity: 1;
+  }
+  to {
+    transform: scale(0);
+    opacity: 0;
+  }
+}
+@keyframes turn {
+  50% {
+    transform: rotate(720deg);
+  }
+}
+@keyframes moveTrain {
+  0% {
+    transform: translateX(0);
+    transform: skewY(2deg);
+  }
+  20% {
+    transform: translateX(200px);
+  }
+  40% {
+    transform: translateX(10px);
+  }
+  60% {
+    transform: translateX(200px);
+  }
+  80% {
+    transform: translateX(80px);
+    transform: skewY(-2deg);
+  }
+  90% {
+    transform: translateX(20px);
+    transform: skewY(-0.1deg);
+  }
+  100% {
+    transform: translateX(10px);
+  }
 }
 @keyframes outline {
   50% {
@@ -72,7 +268,7 @@ input {
     height: 100%;
   }
   section svg {
-    width: 100%;
+    width: auto;
     padding-bottom: 100%;
   }
   section div > div > div svg {
