--- a/docs/css/styles2.less
+++ b/docs/css/styles2.less
@@ -2,17 +2,106 @@
     --red: rgb(99, 0, 0);
     --white: #fff;
 }
+body> input[type="radio"]:checked + div:first-of-type{
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.826);
+    z-index: 99;
+}
 body{
     margin: 0;
-    background-image: url(../img/Background.svg);
-    background-repeat: no-repeat;
+    z-index: -1;
+
+    &>div{
+        position: absolute;
+    }
+    &>div:nth-of-type(2)>div{
+        opacity: 0;
+        animation-delay: 2s;
+    }
+    &>div>div{
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        animation: move 4s infinite;
+        svg{
+            padding-left: 5px;
+            
+        }
+   
+}
+}
+@keyframes move{
+    0%{ 
+        opacity: 1;
+        transform: translateX(100vw);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(-80vw)
+    }
+}
+body > div:first-of-type:hover{
+    animation: wiggle 3s infinite;
+    svg{
+        animation: blink .2s infinite .3s;
+        
+    }
+} 
+    
+@keyframes blink{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+h2{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    top: 3em;
+    position: absolute;
+    animation: scaleBlink 1s infinite;
+}
+@keyframes scaleBlink{
+    to{
+        transform: scale(5) skewX(40deg);
+        opacity: 50%;
+        color: #fff;
+    }
+}
+@keyframes wiggle {
+0% { -webkit-transform: translateX(0%); }
+15% { -webkit-transform: translateX(-2%) rotate(-.5deg); }
+30% { -webkit-transform: translateX(2%) rotate(.3deg); }
+45% { -webkit-transform: translateX(-1%) rotate(-.3deg); }
+60% { -webkit-transform: translateX(1%) rotate(.2deg); }
+75% { -webkit-transform: translateX(-.5%) rotate(-.1deg); }
+100% { -webkit-transform: translateX(0%); }
+}
+body > section{
+    animation: moveBackground 5s infinite linear;
+    height: 400px;
+    width: 180vw;
+    position: absolute;
+    top: 2em;
     z-index: -1;
 }
-
+@keyframes moveBackground{
+    from{
+        transform: translateX(10vw);
+    }
+    to{
+        transform: translateX(-180vw);
+    }
+}
 main{
-    height: 100vh;
+    
     display: flex;
     align-items: center;
+    margin-top: 15em;
+    position: absolute;
     width: auto;
 }
 
@@ -22,11 +111,60 @@ embed{
 }
 
    
-section{
+main>section:first-of-type{
+    animation: moveTrain 12s infinite;
         div {
             div{
+                
                 position: relative;
-                div{
+                aside>div{
+                    background-image:radial-gradient(rgb(56, 56, 56), rgb(31, 30, 30)) ;
+                    display: block;
+                    border-radius: 50%;
+                    border: 3px groove;
+                    width: 4em;
+                    height: 4em;
+                    animation: turn 1s infinite;
+                    position: absolute;
+                    bottom: -2em;
+                    z-index: -1; 
+                    &:after{
+                        content:"";
+                        display: block;
+                        background-color: rgba(255, 255, 255, 0);
+                        border: rgba(218, 165, 32, 0) 3px solid;
+                        position: absolute;
+                        animation: spark .01s infinite;
+                        
+                        z-index:99;
+                    }               
+                }
+                aside{
+                    div:first-of-type{
+                        right: 50%;
+                        &:after{
+                            animation-delay: .1s;
+                            
+                        }
+                    }
+                    div:nth-of-type(2){
+                        right: 15%;
+                        &:after{
+                            animation-delay: 3s;
+                            
+                        }
+                    }
+                    div:nth-of-type(3){
+                        left: 5%;
+                        &:after{
+                            animation-delay: 5.5s;
+                            
+                        }
+                    }
+                }
+                &>div:last-child{
+                    background-image: rgba(0, 0, 0, 0);
+                    border: none;
                     position: absolute;
                     top: 0;
                     
@@ -34,6 +172,7 @@ section{
                          display: block;
                     }
                     input[type="checkbox"]:checked ~ svg  {
+                        opacity: 1;
                         path{
                             stroke-dashoffset: 270;
                             stroke: var(--white);
@@ -47,6 +186,7 @@ section{
                         height: 160px;
                         position: absolute;
                         left: 90px;
+                        top: 0;
                         z-index: 99;
                       }  
                     svg:last-of-type { 
@@ -66,9 +206,58 @@ section{
                 }
             }
         }     
-              
-}        
-
+          
+}  
+section:last-of-type{
+    position: absolute;
+    bottom: -3em;
+    width: 120vw;
+    height: 15px;
+    background-color: rgb(49, 0, 0);
+    border-top: rgb(61, 29, 29) 2px solid;
+}   
+@keyframes spark{
+    from{
+        background-color: ivory;
+        transform: scale(6);
+        opacity: 1;
+    }
+    to{
+        transform: scale(0);
+        opacity: 0;
+    }
+} 
+@keyframes turn{
+    50%{
+        transform: rotate(720deg);
+    }
+}     
+@keyframes moveTrain{
+    0%{
+        transform: translateX(0);
+        transform: skewY(2deg);
+    }
+    20%{
+       transform: translateX(200px);
+    }
+    40%{
+       transform: translateX(10px);
+    }
+    60%{
+       transform: translateX(200px);
+    }
+    80%{
+       transform: translateX(80px);
+       transform: skewY(-2deg);
+    }
+    90%{
+       transform: translateX(20px);
+       transform: skewY(-.1deg);
+    }
+    100%{
+        transform: translateX(10px);
+    }
+}
 @keyframes outline {
     50%{
         fill: rgba(255, 255, 255, 0.479);
@@ -92,9 +281,10 @@ input{
        width: 100%;
        height: 100%;
         svg{
-            width: 100%;
+            width: auto;
             padding-bottom: 100%;
         }
+        
         div>div>div{
             svg{
                 width: 100%;
@@ -109,6 +299,7 @@ input{
                     animation: none;
                 }
             }
+            
         }
     } 
     input[type="checkbox"][checked="checked"] + svg > path {       
